@@ -1,6 +1,9 @@
 v3.3.23 (XXXX-XX-XX)
 --------------------
 
+* fixed a crash (SIGSEGV) when opening a RocksDB database directory that
+  contained an empty (0 bytes filesize) journal file and encryption was in use.
+
 * don't attempt to remove non-existing WAL files, because such attempt will
   trigger unnecessary error log messages in the RocksDB library
 
